--- a/env/golang/Dockerfile
+++ b/env/golang/Dockerfile
@@ -9,12 +9,13 @@ RUN rpm --rebuilddb && yum update -y && \
     yum -y install httpd which && \
     yum -y install vim && \
     rm -rf /var/cache/yum/* && \
-    yum clean all
+    yum clean all && \
+    yum install vim
 
 FROM golang:latest
 
 # コンテナ作業ディレクトリの変更
-WORKDIR ./src
+WORKDIR ./src/Asahi
 
 # ホストOSの ./go の中身を作業ディレクトリに追加
 ADD ./src .
@@ -23,8 +24,9 @@ ADD ./src .
 
 # モジュール管理のファイルをコピー
 COPY ./src .
-
-
+RUN GO111MODULE=off go get github.com/oxequa/realize
+RUN go get -u github.com/oxequa/realize
 # 外部パッケージのダウンロード
+ENV GO111MODULE=on
 RUN go mod download
 EXPOSE 9000
